Fixed white screen on reload (mostly) Fixed about page flickering on redirect

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,10 @@
   color: white;
 }
 
+html {
+  background-color: black;
+}
+
 html,
 body {
   max-width: 100vw;
